# azure-iot-c-analysis

./: .gitignore  .gitmodules  CMakeLists.txt  binary_results.txt  example.json  jebrado-tres_bin_results.txt  mem_reporter.c  mem_reporter.h  test_app.c
app_analysis/: CMakeLists.txt
app_analysis/inc/: app_analysis_const.h  binary_handler.h  dev_health_reporter.h  device_info.h  hash_table.h  health_process_item.h  process_handler.h
app_analysis/src/: binary_handler.c  binary_handler_linux.c  binary_handler_win.c  dev_health_reporter.c  device_info_linux.c  device_info_win.c  hash_table.c  main.c  process_handler_linux.c  process_handler_win.c
binary_info/: CMakeLists.txt  binary_info.c  ll_dps_client.c  ll_sdk_client.c  transport_sdk_client.c  ul_dps_client.c  ul_sdk_client.c
binary_info/lower_layer/: CMakeLists.txt
binary_info/lower_layer/amqp_transport_ll/: CMakeLists.txt
binary_info/lower_layer/amqp_ws_transport_ll/: CMakeLists.txt
binary_info/lower_layer/http_transport_ll/: CMakeLists.txt
binary_info/lower_layer/mqtt_transport_ll/: CMakeLists.txt
binary_info/lower_layer/mqtt_ws_transport_ll/: CMakeLists.txt
binary_info/lower_layer/prov_amqp_transport_ll/: CMakeLists.txt
binary_info/lower_layer/prov_amqp_ws_transport_ll/: CMakeLists.txt
binary_info/lower_layer/prov_http_transport_ll/: CMakeLists.txt
binary_info/lower_layer/prov_mqtt_transport_ll/: CMakeLists.txt
binary_info/lower_layer/prov_mqtt_ws_transport_ll/: CMakeLists.txt
binary_info/upper_layer/: CMakeLists.txt
binary_info/upper_layer/amqp_transport_ul/: CMakeLists.txt
binary_info/upper_layer/amqp_ws_transport_ul/: CMakeLists.txt
binary_info/upper_layer/http_transport_ul/: CMakeLists.txt
binary_info/upper_layer/mqtt_transport_ul/: CMakeLists.txt
binary_info/upper_layer/mqtt_ws_transport_ul/: CMakeLists.txt
binary_info/upper_layer/prov_amqp_transport_ul/: CMakeLists.txt
binary_info/upper_layer/prov_amqp_ws_transport_ul/: CMakeLists.txt
binary_info/upper_layer/prov_http_transport_ul/: CMakeLists.txt
binary_info/upper_layer/prov_mqtt_transport_ul/: CMakeLists.txt
binary_info/upper_layer/prov_mqtt_ws_transport_ul/: CMakeLists.txt
configs/: analysisFunctions.cmake
docs/: memory_layout_of_c_executable.md
examples/: cpu_script.py  proc_pid_net_dev.txt  proc_pid_smaps.txt
memory/: CMakeLists.txt  mem_analytics.c
memory/c2d_memory/: CMakeLists.txt  c2d_mem_analytics.c  c2d_mem_analytics.h
memory/device_method_mem/: CMakeLists.txt  sdk_mem_analytics.c  sdk_mem_analytics.h
memory/network_info/: CMakeLists.txt  network_info.c  network_info.h
memory/prov_net_info/: prov_net_info.c
memory/provisioning_mem/: CMakeLists.txt  provisioning_mem.c
memory/telemetry_memory/: CMakeLists.txt  sdk_mem_analytics.c  sdk_mem_analytics.h
memory/telemetry_net_info/: CMakeLists.txt  network_info.c
network/: CMakeLists.txt  network_analytics.c
network/prov_net_info/: CMakeLists.txt
network/telemetry_net_info/: CMakeLists.txt  network_info.c  network_info.h
script/: .vsts-ci.yml  execute_analysis.cmd  execute_analysis.sh  execute_multiple.sh
test_files/: CMakeLists.txt
test_files/c/: CMakeLists.txt  test_app.c
test_files/node/: package-lock.json  test_app.js
test_files/python/: test_app.py
